Backup now copies files to a tmp-dir to minimize down-time while creating the backup
JAVA_OPTS have been updated with G1-opts from https://wiki.apache.org/solr/ShawnHeisey