@@ -4,7 +4,21 @@ export JAVA_HOME="/usr/lib/jvm/default-java";
 source "/etc/default/tomcat7";
 export CATALINA_HOME="/usr/share/tomcat7";
 export CATALINA_BASE="/var/lib/tomcat7";
-export JAVA_OPTS="-Djava.awt.headless=true -Xmx6122m -XX:+UseConcMarkSweepGC";
+
+javamem=$(( $(cat /proc/meminfo|grep MemTotal: | awk '{ print $2 }') / 1024 * 90 / 100 ))
+export JAVA_OPTS=" \
+  -XX:+UseG1GC \
+  -XX:+PerfDisableSharedMem \
+  -XX:+ParallelRefProcEnabled \
+  -XX:G1HeapRegionSize=8m \
+  -XX:MaxGCPauseMillis=250 \
+  -XX:InitiatingHeapOccupancyPercent=75 \
+  -XX:+UseLargePages \
+  -XX:+AggressiveOpts \
+  -Xmx${javamem}m \
+  -d64 \
+"
+
 export CATALINA_PID="/var/run/tomcat7.pid";
 export CATALINA_TMPDIR="/tmp/tomcat7-tomcat7-tmp";
 export LANG="";
